# MinesweeperSfml

./: .gitignore  CMakeLists.txt  README.md
Dependencies/boost_1_78_0/lib/cmake/boost_atomic-1.78.0/: boost_atomic-config.cmake  libboost_atomic-variant-mgw8-mt-d-x32-1_78-static.cmake  libboost_atomic-variant-mgw8-mt-d-x64-1_78-static.cmake  libboost_atomic-variant-mgw8-mt-x32-1_78-static.cmake  libboost_atomic-variant-mgw8-mt-x64-1_78-static.cmake
Dependencies/boost_1_78_0/lib/cmake/boost_chrono-1.78.0/: boost_chrono-config.cmake  libboost_chrono-variant-mgw8-mt-d-x32-1_78-static.cmake  libboost_chrono-variant-mgw8-mt-d-x64-1_78-static.cmake  libboost_chrono-variant-mgw8-mt-x32-1_78-static.cmake  libboost_chrono-variant-mgw8-mt-x64-1_78-static.cmake
Dependencies/boost_1_78_0/lib/cmake/boost_container-1.78.0/: boost_container-config.cmake  libboost_container-variant-mgw8-mt-d-x32-1_78-static.cmake  libboost_container-variant-mgw8-mt-d-x64-1_78-static.cmake  libboost_container-variant-mgw8-mt-x32-1_78-static.cmake  libboost_container-variant-mgw8-mt-x64-1_78-static.cmake
Dependencies/boost_1_78_0/lib/cmake/boost_context-1.78.0/: boost_context-config.cmake  libboost_context-variant-mgw8-mt-d-x32-1_78-static.cmake  libboost_context-variant-mgw8-mt-d-x64-1_78-static.cmake  libboost_context-variant-mgw8-mt-x32-1_78-static.cmake  libboost_context-variant-mgw8-mt-x64-1_78-static.cmake
Dependencies/boost_1_78_0/lib/cmake/boost_contract-1.78.0/: boost_contract-config.cmake  libboost_contract-variant-mgw8-mt-d-x32-1_78-static.cmake  libboost_contract-variant-mgw8-mt-d-x64-1_78-static.cmake  libboost_contract-variant-mgw8-mt-x32-1_78-static.cmake  libboost_contract-variant-mgw8-mt-x64-1_78-static.cmake
Dependencies/boost_1_78_0/lib/cmake/boost_coroutine-1.78.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-mgw8-mt-d-x32-1_78-static.cmake  libboost_coroutine-variant-mgw8-mt-d-x64-1_78-static.cmake  libboost_coroutine-variant-mgw8-mt-x32-1_78-static.cmake  libboost_coroutine-variant-mgw8-mt-x64-1_78-static.cmake
Dependencies/boost_1_78_0/lib/cmake/boost_date_time-1.78.0/: boost_date_time-config.cmake  libboost_date_time-variant-mgw8-mt-d-x32-1_78-static.cmake  libboost_date_time-variant-mgw8-mt-d-x64-1_78-static.cmake  (+2 more)
include/: Game.h  GameData.h  GameLogic.h  GameView.h
src/: Game.cpp  GameData.cpp  GameLogic.cpp  GameView.cpp  main.cpp
(+149 files in other folders)
